tests/m1/negative/match_guard_not_exhaustive.ax
module match_guard_not_exhaustive;

enum Choice: u8 {
    one = 1,
}

fn main() -> i32 {
    return match Choice.one {
        .one if true => 1,
    };
}
